--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -21,12 +21,15 @@ services:
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
-  db:
-    image: mcr.microsoft.com/mssql/server:2019-latest
-    restart: unless-stopped
-    environment:
-      SA_PASSWORD: P@ssw0rd
-      ACCEPT_EULA: Y
+db:
+  image: mcr.microsoft.com/mssql/server:2019-latest
+  restart: unless-stopped
+  environment:
+    SA_PASSWORD: P@ssw0rd
+    ACCEPT_EULA: Y
+  ports:
+    - "1433:1433"
+
 
     # Add "forwardPorts": ["db:1433"] to **devcontainer.json** to forward MSSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
