--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
   db:
-    image: mcr.microsoft.com/mssql/server:2019-latest
+    image: almalinux/arm64v8:8.9-init-20231124
     restart: unless-stopped
     environment:
       SA_PASSWORD: P@ssw0rd
